# influence_board

./: AUTHORS  FAQ  backend.c  backend.h  common.h  engine-intf.html  moves.c  moves.h  parser.l  xboard.c  xboard.h  xboard.info  xboard.man  xboard.txt  zic2xpm.txt
pixmaps/: pixmaps.h
winboard/: CMakeLists.txt  bcc32.cfg  borland.mak  config.h  defaults.h  msvc.mak  parser.c  resource.h  wclipbrd.c  wclipbrd.h  wedittags.c  wedittags.h  wgamelist.c  wgamelist.h  winboard.c  winboard.h  winboard.rc  winboard.rtf  woptions.c  woptions.h
winboard/extends/infboard/: infboard.c  infboard.h  main.c  vssver2.scc
